--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- Summary Section -->
     <div class="mt-3">
         <h4>Total Milk: <span id="totalMilk">0</span> L</h4>
-        <h4>Total Curd Delivered: <span id="totalCurd">0</span></h4>
+        <h4>Total Curd: <span id="totalCurd">0</span></h4>
         <h4>Total Cost: ₹<span id="totalCost">0.00</span></h4>
     </div>
 
