--- a/index.html
+++ b/index.html
@@ -4,86 +4,128 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Milk & Curd Delivery Tracker</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <div class="container mt-4">
-    <h2 class="text-center">Milk & Curd Delivery Tracker</h2>
+    <header class="text-center mb-4">
+        <h2>Milk & Curd Delivery Tracker</h2>
+    </header>
 
-    <!-- Input Form -->
-    <div class="card p-3 mt-3">
+    <div class="card p-3 mb-4 shadow-sm">
         <form id="milkForm">
-            <div class="row g-3">
-                <div class="col-md-3">
-                    <label class="form-label">Date</label>
+            <div class="row g-3 align-items-end">
+                <div class="col-md-6 col-lg-2">
+                    <label for="date" class="form-label">Date</label>
                     <input type="date" class="form-control" id="date" required>
                 </div>
-                <div class="col-md-2">
-                    <label class="form-label">Milk (L)</label>
-                    <input type="number" class="form-control" id="quantity" step="0.1" required>
+                <div class="col-md-6 col-lg-2">
+                    <label for="quantity" class="form-label">Milk (L)</label>
+                    <input type="number" class="form-control" id="quantity" step="0.1" min="0.1" required>
                 </div>
-                <div class="col-md-2">
-                    <label class="form-label">Milk Price (₹/L)</label>
-                    <input type="number" class="form-control" id="milkPrice" step="0.1" required>
+                <div class="col-md-6 col-lg-2">
+                    <label for="milkPrice" class="form-label">Milk Price (₹/L)</label>
+                    <input type="number" class="form-control" id="milkPrice" step="0.01" min="0" required>
                 </div>
-                <div class="col-md-2">
-                    <label class="form-label">Curd Price (₹)</label>
-                    <input type="number" class="form-control" id="curdPrice" step="0.1" required>
+                <div class="col-md-6 col-lg-2">
+                    <label for="curdPrice" class="form-label">Curd Price (₹)</label>
+                    <input type="number" class="form-control" id="curdPrice" step="0.01" min="0" required>
                 </div>
-                <div class="col-md-3">
-                    <label class="form-label">Curd Delivered</label>
-                    <div>
-                        <input type="radio" id="curdYes" name="curdDelivered" value="Yes" required>
-                        <label for="curdYes">Yes</label>
-
-                        <input type="radio" id="curdNo" name="curdDelivered" value="No" checked>
-                        <label for="curdNo">No</label>
+                <div class="col-md-6 col-lg-2">
+                    <label class="form-label d-block">Curd Delivered</label>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" id="curdYes" name="curdDelivered" value="Yes" required>
+                        <label class="form-check-label" for="curdYes">Yes</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" id="curdNo" name="curdDelivered" value="No" checked>
+                        <label class="form-check-label" for="curdNo">No</label>
                     </div>
                 </div>
-                <div class="col-md-1 text-end">
-                    <button type="submit" class="btn btn-primary mt-4">Add</button>
+                <div class="col-md-12 col-lg-2 text-lg-end">
+                    <button type="submit" class="btn btn-primary w-100">Add Entry</button>
                 </div>
             </div>
         </form>
     </div>
 
-    <!-- Data Table -->
-    <div class="table-responsive mt-3">
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Milk (L)</th>
-                    <th>Curd</th>
-                    <th>Milk Cost (₹)</th>
-                    <th>Curd Cost (₹)</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody id="milkTableBody"></tbody>
-        </table>
+    <div class="card p-3 shadow-sm">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <h4 class="mb-0">Entries</h4>
+            <button class="btn btn-warning" id="deleteAllBtn">Delete All Entries</button>
+        </div>
+        <div class="table-responsive">
+            <table class="table table-bordered table-hover align-middle">
+                <thead class="table-dark">
+                    <tr>
+                        <th>Date</th>
+                        <th>Milk (L)</th>
+                        <th>Curd</th>
+                        <th>Milk Cost (₹)</th>
+                        <th>Curd Cost (₹)</th>
+                        <th class="text-center">Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="milkTableBody"></tbody>
+            </table>
+        </div>
+        <div class="mt-3 text-end">
+            <h5>Total Milk: <span id="totalMilk" class="fw-bold">0</span> L</h5>
+            <h5>Total Curd Days: <span id="totalCurd" class="fw-bold">0</span></h5>
+            <h4 class="mt-2">Total Cost: ₹<span id="totalCost" class="fw-bold">0.00</span></h4>
+        </div>
     </div>
-
-    <!-- Summary Section -->
-    <div class="mt-3">
-        <h4>Total Milk: <span id="totalMilk">0</span> L</h4>
-        <h4>Total Curd: <span id="totalCurd">0</span></h4>
-        <h4>Total Cost: ₹<span id="totalCost">0.00</span></h4>
-    </div>
-
-    <!-- Delete All Button -->
-    <button class="btn btn-warning mt-3" onclick="deleteAllEntries()">Delete All Entries</button>
 </div>
+
+<div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editModalLabel">Edit Entry</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="editForm">
+            <input type="hidden" id="editIndex">
+            <div class="mb-3">
+                <label for="editDate" class="form-label">Date</label>
+                <input type="date" class="form-control" id="editDate" required>
+            </div>
+            <div class="mb-3">
+                <label for="editQuantity" class="form-label">Milk (L)</label>
+                <input type="number" class="form-control" id="editQuantity" step="0.1" min="0.1" required>
+            </div>
+             <div class="mb-3">
+                <label class="form-label d-block">Curd Delivered</label>
+                 <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="editCurdYes" name="editCurdDelivered" value="Yes" required>
+                    <label class="form-check-label" for="editCurdYes">Yes</label>
+                 </div>
+                 <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="editCurdNo" name="editCurdDelivered" value="No">
+                    <label class="form-check-label" for="editCurdNo">No</label>
+                 </div>
+            </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" id="saveChangesBtn">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <footer class="text-center mt-5">
     <p>© 2025 <a href="https://milkncurd.netlify.app" target="_blank">milkncurd.netlify.app</a>. Developed by <a href="https://www.linkedin.com/in/gokul-gopakumar-043994323/" target="_blank">Gokul Gopakumar</a>. All rights reserved.</p>
 </footer>
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="script.js"></script>
-
 
 </body>
 </html>
