--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
                     </div>
                 </div>
                 <div class="col-md-12 col-lg-2 text-lg-end">
-                    <button type="submit" class="btn btn-primary w-100">Add Entry</button>
+                    <button type="submit" class="btn btn-primary w-100 mt-3 mt-lg-0">Add Entry</button>
                 </div>
             </div>
         </form>
     </div>
 
     <div class="card p-3 shadow-sm">
-        <div class="d-flex justify-content-between align-items-center mb-3">
-            <h4 class="mb-0">Entries</h4>
+        <div class="d-flex flex-column flex-sm-row justify-content-between align-items-sm-center mb-3">
+            <h4 class="mb-2 mb-sm-0">Entries</h4>
             <button class="btn btn-warning" id="deleteAllBtn">Delete All Entries</button>
         </div>
         <div class="table-responsive">
@@ -64,8 +64,7 @@
                         <th>Date</th>
                         <th>Milk (L)</th>
                         <th>Curd</th>
-                        <th>Milk Cost (₹)</th>
-                        <th>Curd Cost (₹)</th>
+                        <th>Cost (₹)</th>
                         <th class="text-center">Actions</th>
                     </tr>
                 </thead>
